--- a/laravel-api/composer.json
+++ b/laravel-api/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
