--- a/laravel-api/composer.json
+++ b/laravel-api/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "phpmailer/phpmailer": "^6.10",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.5"
     },
