--- a/laravel-api/composer.json
+++ b/laravel-api/composer.json
@@ -14,7 +14,8 @@
         "maatwebsite/excel": "^3.1",
         "phpmailer/phpmailer": "^6.10",
         "setasign/fpdf": "^1.8",
-        "setasign/fpdi": "^2.5"
+        "setasign/fpdi": "^2.5",
+        "lloricode/laravel-paymaya-sdk": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -29,7 +30,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "PayMaya\\": "packages/laravel-paymaya-sdk/src/"
         }
     },
     "autoload-dev": {
@@ -37,6 +39,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/laravel-paymaya-sdk"
+        }
+    ],
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
